<resources>
    <string name="app_name">Calculator</string>
    <string name="field_1">FIELD 1</string>
    <string name="field_2">FIELD 2</string>
    <string name="result">RESULT</string>
    <string name="_1st_number">NUMBER 1</string>
    <string name="_2nd_number">NUMBER 2</string>
    <string name="ADD">MODE ADDITION</string>
    <string name="SUBTRACT">MODE SUBTRACTION</string>
    <string name="MULTIPLY">MODE MULTIPLICATION</string>
    <string name="DIVIDE">MODE DIVISION</string>
</resources>
